# LenovoK5923Manager

./: COPYING  LICENSE  README.md  com.stangenchev.Lenovok5923manager.json  gesture codes  meson.build
_build/: .ninja_deps  .ninja_log  build.ninja
_build/data/: com.stangenchev.Lenovok5923manager.appdata.xml
_build/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
_build/meson-logs/: meson-log.txt
_build/src/: lenovok5923manager  lenovok5923manager.gresource
data/: com.stangenchev.Lenovok5923manager.appdata.xml.in  com.stangenchev.Lenovok5923manager.desktop.in  com.stangenchev.Lenovok5923manager.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: k5923d.py  lenovok5923manager.gresource.xml  lenovok5923manager.in  main.py  meson.build  window.py  window.ui
